tests/parsing/smtlib/v2.6/errors/019_forall_unopened_sorted_var_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/019_forall_unopened_sorted_var_list_1.smt2", line 2, character 16-17:
2 | (assert (forall _ true))
                    ^
Error while parsing a term, read the reserved word '_',
      but expected a list of sorted variables, starting with an opening
      parenthesis.
